--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "beziers"
 version = "0.1.0"
-authors = ["Vlad Zhukov <vlad.zhukov@elektron.se>"]
+authors = ["Vlad Zhukov <vladzhukovtirko@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
